Fixed missing background and updated sections.

--- a/files/css/Style2.css
+++ b/files/css/Style2.css
@@ -11,14 +11,14 @@ ul {
   }
   /* Add a black background color to the top navigation */
 ul {
-    background-color: #83009c;
+    background-color: black;
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
   ul a {
     float: left;
-    color: #f2f2f2;
+    color: #d65cff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -27,7 +27,7 @@ ul {
   
   /* Change the color of links on hover */
   ul a:hover {
-    background-color: #ddd;
+    background-color: #760096;
     color: black;
   }
   
@@ -40,7 +40,7 @@ ul {
     position: absolute;
     left: 1567px;
     width: 350px;
-    height: 970px;
-    top: 8px;
+    height: 900px;
+    top: 50px;
   }
 
